@@ -1,6 +1,11 @@
 2013-04-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
+	  STM8: Fix asmop freeing for GET_VALUE_AT_ADDRESS, do not share smybol aops to fix double free, fix large comparison, implement bit-field writes.
+
+2013-04-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
 	  STM8: Fix unsigned cast, implement read from unsigned bit-field.
 	* support/regression/tests/0fail.c,
 	  support/regression/tests/0pass.c:
